[package]
name = "fanqie"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "net"] }
serde_json = "1.0"
vercel_runtime = "1"   # 核心运行时库

# 将每个 .rs 文件声明为一个独立的二进制程序
[[bin]]
name = "content"
path = "api/content.rs"

[[bin]]
name = "index"
path = "api/index.rs"